1.asyncTask报错问题解决.2.TabView分页展现数据

--- a/Android_Demo/res/layout/load_more.xml
+++ b/Android_Demo/res/layout/load_more.xml
@@ -8,6 +8,7 @@
         android:id="@+id/loadMoreButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="load more"
-        android:onClick="loadMore"/>
+        android:text="load more"/>
+        <!-- android:onClick="loadMore" -->
+        
 </LinearLayout>
